# wsServer

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  sonar-project.properties  ws.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: c-cpp.yml
certs/: localhost.crt  localhost.key
doc/: AUTOBAHN.md  BUILD_WINDOWS.md  CODING_STYLE.md  FUZZING.md  TLS.md  pull_request_template.md
doc/doxygen/: Doxyfile-mcss  doxy.conf
doc/doxygen/templates/: base.html
doc/man/man3/: ws_close_client.3  ws_get_state.3  ws_getaddress.3  ws_getport.3  ws_ping.3  ws_sendframe.3  ws_sendframe_bcast.3  ws_sendframe_bin.3  ws_sendframe_bin_bcast.3  ws_sendframe_txt.3  ws_sendframe_txt_bcast.3  ws_socket.3
docs/: INST_2usr_2local_2include_2wsserver_2ws_8h.html  annotated.html  dir_0833ae4eb5e99789e6d9940f3357454a.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7ec1322b59fa0ccbc0dd27ff9dc62547.html  dir_b07211472a82c77b37485efe600f0c33.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  echo_8c.html  files.html  handshake_8c.html  include_2ws_8h.html  index.html  md_doc_AUTOBAHN.html  md_doc_BUILD_WINDOWS.html  md_doc_CODING_STYLE.html  md_doc_FUZZING.html  md_doc_TLS.html  md_examples_README.html  md_examples_vtouchpad_README.html  md_extra_toyws_README.html  modules.html  mouse__win_8c.html  mouse__x11_8c.html  namespaces.html  namespacesX.html  pages.html  searchdata-v1.js  send__receive_8c.html  structmouse.html  structws__accept.html  structws__connection.html  structws__events.html  structws__frame__data.html  structws__port.html  vtouchpad_8c.html  ws_8c.html  ws_8h.html  (+1 more)
docs/autobahn/: autobahnpython_0_10_9_case_10_1_1.html  autobahnpython_0_10_9_case_10_1_1.json  autobahnpython_0_10_9_case_12_1_1.html  autobahnpython_0_10_9_case_12_1_1.json  autobahnpython_0_10_9_case_12_1_10.html  autobahnpython_0_10_9_case_12_1_10.json  autobahnpython_0_10_9_case_12_1_11.html  autobahnpython_0_10_9_case_12_1_11.json  autobahnpython_0_10_9_case_12_1_12.html  autobahnpython_0_10_9_case_12_1_12.json  autobahnpython_0_10_9_case_12_1_13.html  autobahnpython_0_10_9_case_12_1_13.json  autobahnpython_0_10_9_case_12_1_14.html  autobahnpython_0_10_9_case_12_1_14.json  autobahnpython_0_10_9_case_12_1_15.html  autobahnpython_0_10_9_case_12_1_15.json  autobahnpython_0_10_9_case_12_1_16.html  autobahnpython_0_10_9_case_12_1_16.json  autobahnpython_0_10_9_case_12_1_17.html  autobahnpython_0_10_9_case_12_1_17.json  autobahnpython_0_10_9_case_12_1_18.html  autobahnpython_0_10_9_case_12_1_18.json  autobahnpython_0_10_9_case_12_1_2.html  autobahnpython_0_10_9_case_12_1_2.json  autobahnpython_0_10_9_case_12_1_3.html  autobahnpython_0_10_9_case_12_1_3.json  autobahnpython_0_10_9_case_12_1_4.html  autobahnpython_0_10_9_case_12_1_4.json  autobahnpython_0_10_9_case_12_1_5.html  autobahnpython_0_10_9_case_12_1_5.json  autobahnpython_0_10_9_case_12_1_6.html  autobahnpython_0_10_9_case_12_1_6.json  autobahnpython_0_10_9_case_12_1_7.html  autobahnpython_0_10_9_case_12_1_7.json  autobahnpython_0_10_9_case_12_1_8.html  autobahnpython_0_10_9_case_12_1_8.json  autobahnpython_0_10_9_case_12_1_9.html  autobahnpython_0_10_9_case_12_1_9.json  autobahnpython_0_10_9_case_12_2_1.html  autobahnpython_0_10_9_case_12_2_1.json  (+2030 more)
example/: Makefile  send_receive.c  send_receive.html
examples/: CMakeLists.txt  Makefile  README.md
examples/echo/: CMakeLists.txt  Makefile  echo.c  echo.html
examples/ping/: CMakeLists.txt  Makefile  ping.c
examples/relay/: CMakeLists.txt  jsmn.h  json_pars.c  json_pars.h  peer.html  peers.json  peers_lut.c  peers_lut.h  relay.c  waitlist.c  waitlist.h
examples/vtouchpad/: CMakeLists.txt  README.md  mouse_win.c  mouse_x11.c  vtouchpad.c  vtouchpad.h  vtouchpad.html
extra/toyws/: README.md  toyws.c  toyws.h  tws_test.c
handshake/: handshake.c
include/: base64.h  utf8.h  ws.h
sha1/: sha1.c
src/: handshake.c  sha1.c  utf8.c  ws.c
src/base64/: base64.c
src/handshake/: handshake.c
src/utf8/: utf8.c
tests/: CMakeLists.txt  Makefile  fuzzingclient.json  run-autobahn.sh  run-fuzzy.sh  validate_output.py  ws_file.c
tests/fuzzy/: Makefile  ws_file.c
tests/fuzzy/packets/: ch_508b_close  ch_close  ff_1b_close  ff_384kB_close  ws_1b_close  ws_98305b_close
tests/fuzzy/packets/frames/: close  ping  req_chrome  req_firefox  req_websocat
tests/fuzzy/packets/msgs/: msg_508bytes
tests/in/: ch_1b_1b_508b_close  ch_1b_close
tests/packets/: ff_ping_ping_close  ws_508b_ping_close
tests/packets/msgs/: msg_1byte  msg_384kB_cont  msg_98305bytes
tests/wsserver_autobahn/: fuzzingclient.json
